--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,10 @@
     font-family: 'Roboto', sans-serif;
     color: #444;
   }
-  
+  body{
+    padding: 5%
+  }
+
   html, body {
     height: 100%;
   }
@@ -22,6 +25,12 @@
   button {
     border: none;
     cursor: pointer;
+    background: blue;
+    color: white;
+    padding: 7px 15px;
+  }
+  input{
+    padding: 7px 10px;
   }
   
   /* GLOBAL/REUSABLE CLASSES */
@@ -39,4 +48,7 @@
     padding: 7px 10px;
     margin: 5px 0;
     color: #fff;
+  }
+  .output {
+    margin-top: 35px;
   }
