finished star wars request

--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,8 @@
   .output {
     margin-top: 35px;
   }
+  .output div {
+    padding: 15px;
+    border: 1px solid black;
+    margin-bottom: 5px;
+  }
